--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   pull_request:
     branches: [develop]
+  push:
+    branches: [develop]
 
 jobs:
   build:
@@ -18,3 +20,12 @@ jobs:
       - run: npm run test -- --coverage
         env:
           CI: true
+      - name: Build Project
+        if: github.event_name = 'push'
+        run: npm run build
+      - name: Deploy to Staging
+        if: github.event_name = 'push'
+        run: npx surge --project ./build --domain overconfident-wash.surge.sh
+        env:
+          SURGE_LOGIN: ${{secret.SURGE_LOGIN}}
+          SURGE_TOKEN: ${{secret.SURGE_TOKEN}}
