--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
         env:
           CI: true
       - name: Build Project
-        if: github.event_name = 'push'
+        if: github.event_name == 'push'
         run: npm run build
       - name: Deploy to Staging
-        if: github.event_name = 'push'
+        if: github.event_name == 'push'
         run: npx surge --project ./build --domain overconfident-wash.surge.sh
         env:
           SURGE_LOGIN: ${{secret.SURGE_LOGIN}}
