--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
       - name: Deploy to Staging
         if: github.event_name == 'push'
-        run: npx surge --project ./build --domain overconfident-wash.surge.sh
+        run: npm surge --project ./build --domain overconfident-wash.surge.sh
         env:
           SURGE_LOGIN: ${{secrets.SURGE_LOGIN}}
           SURGE_TOKEN: ${{secrets.SURGE_TOKEN}}
